[feature] 『init』